HIVE-29781: Iceberg: Basic stats fetch optimization - bulk partition stats read